--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,10 @@ html {
 	color:#555;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul, nav {
 	list-style:none;
 }
@@ -137,5 +141,5 @@ section {
 
 .slideInRight {
   animation-name: slideInRight;
-  animation-delay: 1s;    
+  /* animation-delay: 1s;     */
 }
